# exportify

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  REUSE.toml  _typos.toml  benchmark_diff.py  cliff.toml  coverage.json  lazy_importer_reference.py  mise.toml  pyproject.toml  revert_to_broken.py  ruff.toml  run_sed.sh
.exportify/: .gitignore  config.yaml
.exportify/cache/: analysis_cache.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
.serena/: .gitignore  project.yml
.serena/memories/: project_overview.md  suggested_commands.md
docs/: CACHE_README.md  GENERATOR_REWRITE_SUMMARY.md  IMPLEMENTATION.md  MIGRATION.md  OVERLOAD_HANDLING.md  PROVENANCE_SUPPORT.md  REFACTORING_SUMMARY.md  SCHEMA_VERSION_IMPLEMENTATION.md  caching.md  cli-reference.md  contributing.md  file-writer.md  getting-started.md  init.md  overload-handling.md  provenance.md  schema-versioning.md  troubleshooting.md
docs/plans/: 2026-02-24-snapshot-and-undo.md
src/exportify/: __init__.py  _version.py  cli.py  migration.py  pipeline.py  types.py  utils.py  verify.sh
src/exportify/analysis/: __init__.py  ast_parser.py  ast_parser_overload.py
src/exportify/commands/: __init__.py  cache.py  check.py  clear_cache.py  doctor.py  fix.py  generate.py  init.py  status.py  sync.py  undo.py  utils.py
src/exportify/common/: __init__.py  cache.py  config.py  snapshot.py  types.py
src/exportify/discovery/: __init__.py  file_discovery.py
src/exportify/export_manager/: __init__.py  file_writer.py  generator.py  graph.py  module_all.py  rules.py  section_parser.py
src/exportify/overrides/: codeweaver_overrides.yaml
src/exportify/rules/: README.md  default_rules.yaml  init_template.yaml
src/exportify/schemas/: exportify-config.schema.json
src/exportify/validator/: __init__.py  consistency.py  resolver.py  validator.py
tests/: README.md  __init__.py  conftest.py  repro_performance.py  test_ast_parser.py  test_benchmarks.py  test_cache.py  test_cli.py  test_cli_helpers.py  test_cli_integration.py  test_cli_simple.py  test_code_preservation.py  test_config.py  test_discovery.py  test_file_writer.py  test_generator.py  test_graph.py  test_import_categorization.py  test_import_vs_definition.py  test_integration.py  test_migration.py  test_module_all.py  test_overload_handling.py  test_pipeline.py  test_rules.py  test_snapshot.py  test_type_alias_detection.py  test_type_checking_imports.py  test_types.py  test_typevar_detection.py  test_undo.py  test_userspace.py  test_utils.py  test_validation_integration.py  test_validator.py
tests/fixtures/: __init__.py  sample_type_aliases.py
